// Copyright 2020 Google LLC. All Rights Reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package gnostic.metrics.v1;

// The Go package name.
option go_package = "./metrics;gnostic_metrics_v1";

message WordCount {
  string word = 1;
  int32 count = 2;
}

message Vocabulary {
  string name = 1;
  repeated WordCount schemas = 2;
  repeated WordCount properties = 3;
  repeated WordCount operations = 4;
  repeated WordCount parameters = 5;
}

message VocabularyList { repeated Vocabulary vocabularies = 1; }

message Version {
  string name = 1;
  int32 new_term_count = 2;
  Vocabulary new_terms = 3;
  int32 deleted_term_count = 4;
  Vocabulary deleted_terms = 5;
}

message VersionHistory {
  string name = 1;
  repeated Version versions = 2;
}
